# mujoco-scene-editor

./: CHANGELOG.md  LICENSE.md  README.md  pyproject.toml
.github/workflows/: install-and-run-ruff.yml  publish-to-test-pypi.yml
examples/prompt/: scene_chemistry_lab.txt  scene_chemistry_lab.xml  scene_chess.txt  scene_chess.xml  scene_coffee_shop.txt  scene_coffee_shop.xml  scene_gym.txt  scene_gym.xml  scene_living_room.txt  scene_living_room.xml  scene_office.txt  scene_office.xml  scene_playground.txt  scene_playground.xml  scene_restaurant.xml  scene_workbench.txt  scene_workbench.xml
src/mujoco_scene_editor/: constants.py  controller.py  layout.py  scene_editor.py  scene_renderer.py  state.py
src/mujoco_scene_editor/cli/: editor_cli.py  startup_warning.py
src/mujoco_scene_editor/gui/: robot_node.py  transform_panel.py
src/mujoco_scene_editor/inventory/: local_assets.py  objverse.py
src/mujoco_scene_editor/utils/: blueprint_adapter.py  mesh_conversion.py  mj_urdf_map.py  simple_ik.py  urdf_utils.py  viser_utils.py
tests/: test_state.py  test_viser_utils.py
